k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-backend
  template:
    metadata:
      labels:
        app: task-manager-backend
    spec:
      containers:
        - name: backend
          image: hieuthanh4a2/task-manager-backend:latest
          ports:
            - containerPort: 3002
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-backend
spec:
  selector:
    app: task-manager-backend
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
